--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   flutter_screenutil: ^5.9.3
   image_picker: ^1.2.0
-  image_cropper: ^9.1.0
+  image_cropper: ^10.0.0+1
   country_code_picker: ^3.4.0
   iconsax: ^0.0.8
   flutter_staggered_animations: ^1.1.1
