--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   iconsax: ^0.0.8
   flutter_staggered_animations: ^1.1.1
   camera: ^0.11.2
-
+  google_mlkit_face_detection: ^0.13.1
 
 
 
